Changelog
=========

4.3.0 (unreleased)
------------------

- Dynamic portal title in comments viewlet. Refs #15699
  [reinhardt]


4.2.1 (2017-06-12)
------------------

- Allow running export after 6 days. Time between end of export and start of
  next export is always less than 7 days. Refs #15191
  [reinhardt]
- More unicode handling in newsletter. Refs #15075
  [reinhardt]
- Make sure we get all results from solr for the export. Refs  #15191
  [reinhardt]


4.2.0 (2017-03-30)
------------------

- bvid-update: More robust conditions. Refs #14156
  [reinhardt]
- metadata-export: Catch catalog inconsistencies. Refs #14156
  [reinhardt]
- metadat-export: Added 'force' flag. Also commit after deleting timestamp.
  Refs #14156
  [reinhardt]
- Upgrade to c.solr 5 but deactivate atomic updates. Refs #15018
  [reinhardt]
- Added parameter to extend sehepunkte import further into the past.
  Refs #14551
  [reinhardt]
- Sehepunkte: Skip boxes without header. Refs #14551
  [reinhardt]


4.1.2 (2017-01-27)
------------------

- Require specific custom version of collective.solr
  [reinhardt]


4.1.1 (2017-01-27)
------------------

- Changed fields of MissingBVIDExporter, refs #14156
  [reinhardt]
- Added bvid-update view, refs #14156
  [reinhardt]
- Use canonical_uri in BVID export if activated, refs #14156
  [reinhardt]


4.0.5 (2016-11-29)
------------------

- Handle volumes as well as issues in ChroniconExporter, refs #14262
  [reinhardt]
- Upgraded to collective.solr 4.0, refs #14362 [reinhardt]
- Added relations and PIDs plus some minor corrections, refs #14349
  [reinhardt]


4.0.4 (2016-10-20)
------------------

- Added currentVersion, refs #13874 [reinhardt]


4.0.3 (2016-10-20)
------------------

- Fixed resourceType, refs #13874 [reinhardt]


4.0.2 (2016-07-11)
------------------

- Only run doi registration for review types, refs #13566 [reinhardt]


4.0.1 (2016-05-23)
------------------

- Fixed path depth, refs #13615 [reinhardt]